# oat

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  REFACTOR.md  config.example.toml
.github/scripts/: compute-version.sh  set-cargo-version.sh
.github/workflows/: pr.yml  release.yml
contrib/: __init__.py
contrib/harbor/: __init__.py  build_compat_oat.sh  oat_agent.py  oat_runner.py  oat_runner.sh
docs/: tbench2.md
prompts/: plan.md  plan_subagent.md  system.md
src/: agent.rs  ask_user.rs  codex.rs  command_history.rs  completion_request.rs  composer.rs  config.rs  debug_log.rs  history_reduction.rs  input.rs  lib.rs  llm.rs  main.rs  model_registry.rs  planning.rs  session_store.rs  stats.rs  subagents.rs  task.rs  todo.rs  token_counting.rs  tool_policy.rs  tool_result_status.rs  tools.rs
src/app/: actions.rs  mod.rs  query.rs  reducer_context.rs  state.rs
src/app/ops/: approvals.rs  ask_user.rs  composer.rs  history.rs  mod.rs  picker.rs  planning.rs  session.rs  stats.rs  transcript.rs
src/app/reducer/: input.rs  mod.rs  planning.rs  system.rs
src/app/session/: actions.rs  approvals.rs  ask_user.rs  effects.rs  events.rs  mod.rs  models.rs  reducer.rs  selectors.rs  state.rs  submit.rs  test_support.rs  transcript.rs
src/app/shell/: approvals.rs  ask_user.rs  composer.rs  history.rs  mod.rs  picker.rs  planning.rs  session.rs  transcript.rs
src/app/ui/: approvals.rs  ask_user.rs  command_history.rs  composer.rs  history.rs  mod.rs  picker.rs  state.rs  stats.rs
src/background_terminals/: buffer.rs  events.rs  format.rs  manager.rs  mod.rs  pty.rs  store.rs  tests.rs
src/config/: mod.rs  partial.rs  paths.rs  tests.rs  types.rs  updates.rs  validation.rs
src/features/planning/: executor.rs  mod.rs  protocol.rs  state.rs  transitions.rs  view.rs
src/llm/: agent_builder.rs  compaction.rs  critic.rs  mod.rs  responses_search.rs  resume.rs  safety.rs  service.rs  streaming.rs  tests.rs  types.rs
src/llm/hooks/: ask_user.rs  capture.rs  mod.rs  shell_approval.rs  write_approval.rs
src/memory/: ai.rs  mod.rs
src/runtime/: bootstrap.rs  clipboard.rs  command_history.rs  effect_executor.rs  events.rs  headless.rs  mod.rs  reply_driver.rs  side_channel_task_manager.rs  tui.rs  turn_controller.rs
src/subagents/: events.rs  executor.rs  failures.rs  mod.rs  store.rs  tests.rs  waiting.rs
src/tools/: apply_patches.rs  ask_user.rs  background_terminal.rs  catalog.rs  commentary.rs  common.rs  delete_path.rs  grep.rs  list.rs  memory.rs  mod.rs  output_limit.rs  preview.rs  read_file.rs  read_files.rs  run_shell_script.rs  shell_command.rs  subagent.rs  task.rs  todo.rs  web_run.rs  write_file.rs
src/ui/: background_terminal_activity.rs  history.rs  hosted_tool_activity.rs  markdown.rs  mod.rs  render.rs  scrollbar.rs  subagent_activity.rs  theme.rs  todo_activity.rs  tool_activity.rs  wrap.rs
src/web/: mod.rs
(+35 files in other folders)
