[package]
name = "oat"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
crossterm = "0.29"
futures-util = "0.3.32"
ignore = "0.4.24"
ratatui = { version = "0.30.0", default-features = false, features = ["crossterm", "crossterm_0_29"] }
ratatui-textarea = "0.8.0"
regex = "1.12.2"
rig-core = "0.33.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
toml = "1.0.7"
tui-markdown = { version = "0.3.7", default-features = false, features = ["highlight-code"] }
